| Bug #6275 | "client_test" fail in 4.1.7 make test | ||
|---|---|---|---|
| Submitted: | 27 Oct 2004 6:30 | Modified: | 14 Dec 2004 12:04 |
| Reporter: | Yukihiro KAWADA | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Compiling | Severity: | S2 (Serious) |
| Version: | 4.1.7 | OS: | Any (Any) |
| Assigned to: | Alexander Barkov | CPU Architecture: | Any |
[27 Oct 2004 6:30]
Yukihiro KAWADA
[27 Oct 2004 6:36]
Shuichi Tamagawa
I had the same error on SuSE Linux 9.0. (Linux 2.4.21-243-default #1 Thu Aug 12 15:22:14 UTC 2004 i686)
[27 Oct 2004 7:31]
Shuichi Tamagawa
It seems that this happens if configured with multi-byte character set by using --with-charset option. It passed the test after removing --with-charset=ujis from configure option.
[27 Oct 2004 8:52]
Hartmut Holzgraefe
verified, reproduced with configure --with-charset=ujis ; make; make test the failing statement in client_test.c and the error message are: UPDATE myclient_test SET name= 'updated' WHERE name= 'deleted'; ERROR 1267 (HY000): Illegal mix of collations (ujis_japanese_ci,IMPLICIT) and (utf8_general_ci,COERCIBLE) for operation '='
[27 Oct 2004 8:56]
Yukihiro KAWADA
configure options are: ./configure --prefix=/usr/local/mysql41 --with-extra-charsets=complex --enable-thread-safe-client --enable-local-infile --enable-assembler --disable-shared --with-mysqld-ldflags=-all-static --with-charset=utf8 --with-innodb key word is '--with-charset=utf8'
[14 Dec 2004 12:04]
Alexander Barkov
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Fixed in 4.1.8
