bug#6275 "client_test" fail in 4.1.7 make test bug#6911 resultset metadata always return client character set